--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,3 +81,19 @@ jobs:
       - name: Run build script
         run: echo "fake build"
         shell: bash
+
+  IntegrationTesting:
+    needs: [Templates, References, Glue, App, Docker, Batches, Pipelines]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run build script
+        run: echo "fake build"
+        shell: bash
+
+  AcceptanceTesting:
+    needs: [IntegrationTesting]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run build script
+        run: echo "fake build"
+        shell: bash
