--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   BaseInfra:
     runs-on: ubuntu-latest
+    environment:
+      name: production
     steps:
       - name: Run build script
         run: echo "fake build"
@@ -18,14 +20,6 @@ jobs:
 
   DeployInfrastructure:
     needs: BaseInfra
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run build script
-        run: echo "fake build"
-        shell: bash
-
-  DeployPipelines:
-    needs: DeployInfrastructure
     runs-on: ubuntu-latest
     steps:
       - name: Run build script
