--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -1,9 +1,7 @@
 name: Deploy Script
 
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
 
 permissions:
   contents: read
@@ -11,8 +9,6 @@ permissions:
 jobs:
   BaseInfra:
     runs-on: ubuntu-latest
-    environment:
-      name: production
     steps:
       - name: Run build script
         run: echo "fake build"
