--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,5 +9,10 @@ permissions:
   contents: read
 
 jobs:
-  call-workflow:
+  deployPPD:
+  environment: ppd
+    uses: ./.github/workflows/template.yml
+  deployProd:
+  needs: BaseInfra
+  environment: production
     uses: ./.github/workflows/template.yml
