--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,8 @@ permissions:
 
 jobs:
   deployPPD:
-    environment: ppd
-      uses: ./.github/workflows/template.yml
-  deployProd:
-    needs: BaseInfra
-    environment: production
-      uses: ./.github/workflows/template.yml
+    uses: ./.github/workflows/template.yml
+  # deployProd:
+  #   needs: BaseInfra
+  #   environment: production
+  #     uses: ./.github/workflows/template.yml
