--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Run build script
         run: echo "fake build"
         shell: bash
+        
 
   DeployInfrastructure:
     needs: BaseInfra
@@ -29,11 +30,8 @@ jobs:
       - name: Run build script
         run: echo "fake build"
         shell: bash
-  Batches:
-    needs: DeployInfrastructure
-    runs-on: ubuntu-latest
     steps:
-      - name: Run build script
+      - name: deploy batches
         run: echo "fake build"
         shell: bash
   Docker:
