--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,18 +35,18 @@ jobs:
         shell: bash
 
 
-  IntegrationTesting:
-    needs: [Templates, References, Glue, App, Docker, Batches, Pipelines]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run build script
-        run: echo "fake build"
-        shell: bash
+  # IntegrationTesting:
+  #   needs: [Templates, References, Glue, App, Docker, Batches, Pipelines]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Run build script
+  #       run: echo "fake build"
+  #       shell: bash
 
-  AcceptanceTesting:
-    needs: [IntegrationTesting]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run build script
-        run: echo "fake build"
-        shell: bash
+  # AcceptanceTesting:
+  #   needs: [IntegrationTesting]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Run build script
+  #       run: echo "fake build"
+  #       shell: bash
