--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
         shell: bash
 
   DeployPPD:
+    environment: ppd
     needs: BuildDependencies
     uses: ./.github/workflows/template.yml
   DeployProd:
+    environment: prod
     needs: DeployPPD
     uses: ./.github/workflows/template.yml
