--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -13,90 +13,14 @@ jobs:
       name: production
     steps:
       - id: step1
-        run: echo "firstword=hello" >> $GITHUB_OUTPUT
+        run: sleep 2
       - id: step23
-        run: echo "secondword=world" >> $GITHUB_OUTPUT
+        run: sleep 2
       - id: step12222
-        run: echo "firstword=hello" >> $GITHUB_OUTPUT
+        run: sleep 3
       - id: step231
-        run: echo "secondword=world" >> $GITHUB_OUTPUT
+        run: sleep 5
       - id: step113
-        run: echo "firstword=hello" >> $GITHUB_OUTPUT
+        run: sleep 5
       - id: step132
-        run: echo "secondword=world" >> $GITHUB_OUTPUT
-
-  # DeployInfrastructure:
-  #   needs: BaseInfra
-  #   environment: 
-  #     name: production
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-
-  # Pipelines:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-  # Batches:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-  # Docker:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-  # App:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-  # Glue:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-  # References:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-  # Templates:
-  #   needs: DeployInfrastructure
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-
-  # IntegrationTesting:
-  #   needs: [Templates, References, Glue, App, Docker, Batches, Pipelines]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
-
-  # AcceptanceTesting:
-  #   needs: [IntegrationTesting]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Run build script
-  #       run: echo "fake build"
-  #       shell: bash
+        run: sleep 5
