--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -19,7 +19,7 @@ jobs:
       - id: step12222
         run: sleep 3
       - id: step231
-        run: sleep 5 exit 0
+        run: sleep 5 
       - id: step113
         run: sleep 5
       - id: step132
