--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -10,7 +10,7 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     environment: 
-      name: production
+      name: prod
     steps:
       - id: step1
         run: sleep 2
