--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
         with:
           filters: |
             changes_in_specific_folder:
-              - './nextjs/**'
+              - 'nextjs/**/*'
+
 
   BuildNextJs_DEV:
     needs: check_changes
@@ -37,31 +38,31 @@ jobs:
       environment: Dev
 
 
-  BuildNextJs_NP:
-    needs: [check_changes,BuildBackend_DEV]
-    if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
-    uses: ./.github/workflows/nextjsStuff.yml
-    with:
-      environment: np
+  # BuildNextJs_NP:
+  #   needs: [check_changes,BuildBackend_DEV]
+  #   if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
+  #   uses: ./.github/workflows/nextjsStuff.yml
+  #   with:
+  #     environment: np
 
-  BuildBackend_NP:
-    needs: [check_changes,BuildNextJs_NP]
-    if: always()
-    uses: ./.github/workflows/backendStuff.yml
-    with:
-      environment: np
+  # BuildBackend_NP:
+  #   needs: [check_changes,BuildNextJs_NP]
+  #   if: always()
+  #   uses: ./.github/workflows/backendStuff.yml
+  #   with:
+  #     environment: np
 
-  BuildNextJs_Prod:
-    needs: [check_changes,BuildBackend_NP]
-    if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
-    uses: ./.github/workflows/nextjsStuff.yml
-    with:
-      environment: prod
+  # BuildNextJs_Prod:
+  #   needs: [check_changes,BuildBackend_NP]
+  #   if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
+  #   uses: ./.github/workflows/nextjsStuff.yml
+  #   with:
+  #     environment: prod
 
-  BuildBackend_prod:
-    needs:  [check_changes,BuildNextJs_Prod]
-    if: always()
-    uses: ./.github/workflows/backendStuff.yml
-    with:
-      environment: prod
+  # BuildBackend_prod:
+  #   needs:  [check_changes,BuildNextJs_Prod]
+  #   if: always()
+  #   uses: ./.github/workflows/backendStuff.yml
+  #   with:
+  #     environment: prod
 
