--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,26 +32,25 @@ jobs:
       environment: Dev
 
   BuildBackend_DEV:
-    needs: BuildNextJs_DEV
     if: always()
     uses: ./.github/workflows/backendStuff.yml
     with:
       environment: Dev
 
 
-  # BuildNextJs_NP:
-  #   needs: [check_changes,BuildBackend_DEV]
-  #   if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
-  #   uses: ./.github/workflows/nextjsStuff.yml
-  #   with:
-  #     environment: np
+  BuildNextJs_NP:
+    needs: [check_changes,BuildBackend_DEV]
+    if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
+    uses: ./.github/workflows/nextjsStuff.yml
+    with:
+      environment: np
 
-  # BuildBackend_NP:
-  #   needs: [check_changes,BuildNextJs_NP]
-  #   if: always()
-  #   uses: ./.github/workflows/backendStuff.yml
-  #   with:
-  #     environment: np
+  BuildBackend_NP:
+    needs: [check_changes,BuildNextJs_NP]
+    if: always()
+    uses: ./.github/workflows/backendStuff.yml
+    with:
+      environment: np
 
   # BuildNextJs_Prod:
   #   needs: [check_changes,BuildBackend_NP]
