--- a/.github/workflows/nextjsStuff.yml
+++ b/.github/workflows/nextjsStuff.yml
@@ -11,20 +11,11 @@ permissions:
   contents: read
 
 jobs:
-  paths-filter:
+  Deploy:
     runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.filter.outputs.workflows }}
+    environment: 
+      name: ${{ inputs.environment }}
     steps:
-    - uses: actions/checkout@v2
-    - uses: dorny/paths-filter@v2
-      id: filter
-      with:
-        filters: |
-          workflows:
-            - '.github/workflows/**'
-    # run only if 'workflows' files were changed
-    - name: workflow tests
-      if: steps.filter.outputs.workflows == 'true'
-      run: echo "Workflow file"
+      - id: step1
+        run: sleep 2
 
