--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,6 @@ jobs:
               - 'nextjs/**/*'
               
           
-
-
   BuildNextJs_DEV:
     needs: check_changes
     if:  ${{ needs.check_changes.outputs.frontend == 'true' }}
@@ -33,6 +31,7 @@ jobs:
       environment: Dev
 
   BuildBackend_DEV:
+    needs: check_changes
     if: always()
     uses: ./.github/workflows/backendStuff.yml
     with:
@@ -47,23 +46,22 @@ jobs:
       environment: np
 
   BuildBackend_NP:
-    needs: [BuildNextJs_NP]
+    needs: [BuildBackend_DEV,BuildNextJs_DEV]
     if: always()
     uses: ./.github/workflows/backendStuff.yml
     with:
       environment: np
 
-  # BuildNextJs_Prod:
-  #   needs: [check_changes,BuildBackend_NP]
-  #   if: needs.check_changes.outputs.changes_in_specific_folder == 'true'
-  #   uses: ./.github/workflows/nextjsStuff.yml
-  #   with:
-  #     environment: prod
+  BuildNextJs_Prod:
+    needs: [BuildBackend_NP,BuildNextJs_NP]
+    if: ${{needs.check_changes.outputs.changes_in_specific_folder}} == 'true'
+    uses: ./.github/workflows/nextjsStuff.yml
+    with:
+      environment: np
 
-  # BuildBackend_prod:
-  #   needs:  [check_changes,BuildNextJs_Prod]
-  #   if: always()
-  #   uses: ./.github/workflows/backendStuff.yml
-  #   with:
-  #     environment: prod
-
+  BuildBackend_Prod:
+    needs: [BuildBackend_NP,BuildNextJs_NP]
+    if: always()
+    uses: ./.github/workflows/backendStuff.yml
+    with:
+      environment: np
